--- a/college Projects/Exp4/tables.html
+++ b/college Projects/Exp4/tables.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="styles.css"/>
 </head>
 
-<body>
+<body>	
 	<table >
 		<tr>
 			<th class="day">Day / hour</th>
@@ -21,8 +21,8 @@
 		
 		<tr>
 			<th>Monday</th>
-			<td colspan="4" bgcolor="Orange">ITE Lab</td>
-			<td bgcolor="Tomato">ITE</td>
+			<td colspan="4" bgcolor="chocolate">ITE Lab</td>
+			<td bgcolor="red">ITE</td>
 			<td></td>
 			<td></td>
 			<td></td>
@@ -32,30 +32,30 @@
 		<tr>
 			<th>Tuesday</th>
 			<td bgcolor="SlateBlue" colspan="2">Maths</td>
-			<td colspan="2" bgcolor="Violet">English</td>
-			<td colspan="2"bgcolor="grey">BEEE</td>
+			<td colspan="2" bgcolor="brown">English</td>
+			<td colspan="2"bgcolor="indigo">BEEE</td>
 			<td></td>
 			<td></td>
 		</tr>
 		
 		<tr>
 			<th>Wednesday</th>
-			<td colspan="2" bgcolor="Tomato">ITE</td>
-			<td bgcolor="grey">BEEE</td>
-			<td colspan="5" bgcolor="MediumSeaGreen">Engineering Graphics</td>
+			<td colspan="2" bgcolor="red">ITE</td>
+			<td bgcolor="indigo">BEEE</td>
+			<td colspan="5" bgcolor="deeppink">Engineering Graphics</td>
 		</tr>
 		
 		<tr>
 			<th>Thursday</th>
-			<td colspan="4" bgcolor="LightGray">BEEE Lab</td>
+			<td colspan="4" bgcolor="green">BEEE Lab</td>
 			<td colspan="2" bgcolor="SlateBlue">Maths</td>
-			<td colspan="2"bgcolor="Violet">English</td>
+			<td colspan="2"bgcolor="brown">English</td>
 		</tr>
 		
 		<tr>
 			<th>Friday</th>
 			<td ></td>
-			<td bgcolor="grey">BEE</td>
+			<td bgcolor="indigo">BEE</td>
 			<td ></td>
 			<td ></td>
 			<td ></td>
@@ -65,10 +65,23 @@
 		</tr>
 	</table>
 
-	<table>
+
+
+
+
+	<table class='slot'>
+		<colgroup>
+			<col style="background-color:indigo">	
+			<col style="background-color:orange">	
+			<col style="background-color:teal">	
+			<col style="background-color:brown">	
+			<col style="background-color:chocolate">	
+			<col style="background-color:blueviolet">	
+			<col style="background-color:deeppink">	
+		</colgroup>
 		<tr>
 			<th>S.no</th>
-			<th>Subjec Code</th>
+			<th>Subject Code</th>
 			<th>Subject Name</th>
 			<th>Type</th>
 			<th>Staff Name</th>
